# Yawn

./: .gitignore  README.md  pyproject.toml
cli/: __init__.py  commands.py  main.py
config/: default.yaml  roles.yaml
core/: __init__.py  continuity.py  delta.py  state.py
docs/: ARCHITECTURE.md  ROADMAP.md
executor/: __init__.py  claude.py  roles.py  runner.py
storage/: __init__.py  base.py  local.py
