[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yawn"
version = "0.1.0"
description = "Persistence-first execution framework for long-running, model-assisted systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Gyreedy" }
]

dependencies = [
    "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/YawnV1/Yawn"
Repository = "https://github.com/YawnV1/Yawn"

[project.scripts]
yawn = "cli.main:main"

[tool.setuptools]
packages = [
    "cli",
    "config",
    "core",
    "executor",
    "storage"
]

